<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_intent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exit_auto_focus_intent_hint"
        app:helperTextEnabled="true"
        app:helperText="@string/exit_auto_focus_intent_helper"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_intent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="2"
            android:maxLines="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/exit_auto_focus_minutes_hint"
        app:helperTextEnabled="true"
        app:helperText="@string/exit_auto_focus_minutes_helper"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_minutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4"
            android:text="5" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
